# slackbot

./: .travis.yml  Cargo.toml  LICENSE  README.md  search-index.js
.travis/: upload-docs.sh
slackbot/: index.html  sidebar-items.js  struct.Sender.html  struct.SlackBot.html  trait.CommandHandler.html
slackbot/sender/: sidebar-items.js  struct.Sender.html
src/: event_handler.rs  lib.rs  sender.rs
src/slackbot/: lib.rs.html  sender.rs.html
