[package]
name = "slackbot"
version = "0.2.0"
authors = ["Matt Jones <mthjones@gmail.com>"]
description = "Slack bots made easy"
keywords = ["slack", "bot"]
license = "MIT"
repository = "https://github.com/mthjones/slackbot"
homepage = "https://github.com/mthjones/slackbot"
documentation = "https://mthjones.github.io/slackbot/slackbot"

[dependencies]
slack = "^0.8.2"
serde_json = "^0.6.0"
